# FIX4.2-protocol

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Doxyfile  README.md  docker-compose.client.yml  docker-compose.server.yml  docker-compose.yml  schema.drawio  t.py
client/: CMakeLists.txt  README.md  client.cmake
client/Back/src/: Core.cpp  FrontManager.cpp  User.cpp  main.cpp
client/Back/src/ProcessUnit/: FixBuilder.cpp  Router.cpp
client/Common/: CMakeLists.txt
client/Common/src/IPC/: Header.cpp  Helper.cpp  MessageType.cpp
client/Common/src/ipc/: Header.cpp  Helper.cpp  MessageType.cpp
client/GUI/: CMakeLists.txt  README.md  config.json
client/GUI/src/: BackManager.cpp  Config.cpp  InitiatorManager.cpp  main.cpp
client/GUI/src/UI/: LoginScreen.cpp  OrderExecution.cpp
client/SQL/: init.sql
client/back/: CMakeLists.txt  README.md  config.json
client/back/src/: Config.cpp  Core.cpp  FrontManager.cpp  InitiatorManager.cpp  Signal.cpp  User.cpp  main.cpp
client/back/src/ProcessUnit/: FixBuilder.cpp  HeaderValidation.cpp  Router.cpp
client/include/Client/: Core.hpp  User.hpp
client/include/Client/Handler/: TCPHandler.hpp
client/include/Client/ProcessUnit/: Router.hpp  TcpInput.hpp  TransitName.hpp
client/include/Client/Processor/: OrderBook.inl
client/initiator/: CMakeLists.txt  README.md  config.json
client/initiator/src/: Config.cpp  Core.cpp  Session.cpp  SessionManager.cpp  Signal.cpp  main.cpp
client/initiator/src/ProcessUnit/: BackHandler.cpp  FrontHandler.cpp
client/initiator/src/Shell/: Builder.cpp  Command.cpp
client/shared/: CMakeLists.txt  README.md
client/shared/IPC/: CMakeLists.txt  README.md
client/shared/IPC/src/: Header.cpp  Helper.cpp  MessageType.cpp
client/src/: Core.cpp  History.cpp  User.cpp  main.cpp
client/src/Handler/: TCPHandler.cpp
client/src/ProcessUnit/: Router.cpp  TcpInput.cpp
client/src/ProcessUnit/Network/: TcpInput.cpp  TcpOutput.cpp
client/src/ProcessUnit/User/: HeartBeat.cpp
client/src/Processor/: OBData.cpp
cmake/: copy_config.cmake
common/: CMakeLists.txt  common.cmake
common/include/Common/: Utils.hpp  Utils.inl  meta.hpp
common/include/Common/Container/: AInputProcess.hpp  AInputProcess.inl  AProcessUnit.hpp  AProcessUnit.inl  AProcessUnitBase.hpp  IProcessUnit.hpp  IProcessUnitBase.hpp  InsertMap.hpp  InsertMap.inl  ProcessUnit.hpp  ProcessUnit.inl
common/include/Common/Core/: Logger.inl  Order.hpp
common/include/Common/Log/: Event.hpp  ILogger.hpp  ILogger.inl  Level.hpp  Manager.hpp  Manager.inl
common/include/Common/Message/: BusinessMessageReject.hpp  ExecutionReport.hpp  Fix.hpp  Message.hpp  Reject.hpp  Tag.hpp  Tag.inl  TestRequest.hpp
common/include/Common/Network/: Acceptor.hpp  Acceptor.inl  BaseSocket.hpp  Buffer.hpp  Buffer.inl  CSocket.hpp  Selector.hpp  Selector.inl  Socket.hpp  Socket.inl  UDPPackage.hpp
common/src/: Utils.cpp
common/src/Container/: AProcessUnitBase.cpp
common/src/Core/: Order.cpp  UDPPackage.cpp
common/src/Log/: ILogger.cpp  Level.cpp  Manager.cpp
common/src/Log/Imp/: Base.cpp  Buffer.cpp  Console.cpp  File.cpp
common/src/Message/: Fix.cpp  Header.cpp  HeartBeat.cpp  Logon.cpp  MarketDataRequest.cpp  MessageBuisnessReject.cpp  NewOrderSingle.cpp  OrderCancelReplaceRequest.cpp  OrderCancelRequest.cpp  TestRequest.cpp
common/src/Network/: BaseSocket.cpp  Buffer.cpp  CSocket.cpp  Socket.cpp
common/tests/Network/: Selector.cpp  main.cpp  tcpSocket.cpp
common/tests/Network/Stream/: Selector.cpp  StreamSocket.cpp
server/: CMakeLists.txt  DockerFile  Dockerfile  README.md  config.json  server.cmake
server/include/Server/: ClientStore.hpp  ClientStore.inl  Config.hpp  Core.hpp  InternalClient.hpp  MDSubscribeRegistery.hpp  OrderBook.hpp  OrderBook.inl  meta.hpp
server/include/Server/Core/: ClientStore.hpp  ClientStore.inl  Core.hpp  InternalClient.hpp  MarketContainer.hpp  OrderBook.hpp  OrderBook.inl  meta.hpp
server/spec/: BusinessMessageReject.md  ExecutionReport.md  HeartBeat.md  Logon.md  Logout.md  MarketDataIncrementalRefresh.md  MarketDataRequest.md  MarketDataRequestReject.md  MarketDataSnapshotFullRefresh.md  NewOrderSingle.md  ORderCancelReject.md  OrderCancelRequest.md  README.md  Reject.md  TestRequest.md
server/src/: ClientStore.cpp  Config.cpp  Core.cpp  InternalClient.cpp  MDSubscribeRegistery.cpp  OrderBook.cpp  Signal.cpp  main.cpp
server/src/Core/: ClientStore.cpp  Core.cpp  InternalClient.cpp  MarketContainer.cpp  OrderBook.cpp
server/src/Network/: Processor.cpp
server/src/ProcessUnit/: HeaderValidation.cpp  MarketContainer.cpp  MarketDataRouter.cpp  MarketRouter.cpp  Router.cpp
shared/: CMakeLists.txt  README.md
shared/Configuration/: CMakeLists.txt
shared/Container/: CMakeLists.txt
shared/Core/: CMakeLists.txt
shared/Core/src/: Core.cpp  Order.cpp
shared/Log/: CMakeLists.txt  README.md
shared/Log/src/: ILogger.cpp  Level.cpp  Manager.cpp
shared/Message/: CMakeLists.txt
shared/Message-v2/: CMakeLists.txt
shared/Message-v2/src/: FixConvertor.cpp  TagConvertor.cpp  enum.cpp
shared/Message/src/: ExecutionReport.cpp  Fix.cpp  Header.cpp  HeartBeat.cpp  Logon.cpp  Logout.cpp  MarketDataIncrementalRefresh.cpp  MarketDataRequest.cpp  MarketDataSnapshotFullRefresh.cpp  MessageBuisnessReject.cpp  NewOrderSingle.cpp  OrderCancelReject.cpp  OrderCancelReplaceRequest.cpp  OrderCancelRequest.cpp  OrderStatusRequest.cpp  Reject.cpp  Serializer.cpp  TestRequest.cpp
shared/Network/: CMakeLists.txt  README.md
shared/Network/src/: BaseSocket.cpp  Buffer.cpp  CEPoll.cpp  CSocket.cpp  Ip.cpp  Socket.cpp
shared/PgSQL/: CMakeLists.txt  README.md
shared/PgSQL/src/: Connection.cpp
shared/ProcessUnit/: CMakeLists.txt  README.md
shared/ProcessUnit/src/: AProcessUnitBase.cpp
shared/Thread/: CMakeLists.txt  README.md
shared/Utils/: CMakeLists.txt
shared/Utils/src/: Utils.cpp
test/: CMakeLists.txt
test/functional/2/: CLIENT_1_TEST1-EQUAL.py
test/functional/3/: CLIENT_1_TEST2.py
test/functional/4/: CLIENT_1_TEST3.py
test/unit/messages/: test_logon.cpp  test_utils.cpp
(+409 files in other folders)
